--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/application.properties
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+spring.thymeleaf.prefix=classpath:/templates/dashboard/
+spring.thymeleaf.suffix=.html
+server.error.whitelabel.enabled=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/student
+spring.datasource.username=jacob
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
