--- a/Projects/SpringBoot/githubAnalytics/src/main/resources/application.properties
+++ b/Projects/SpringBoot/githubAnalytics/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.error.whitelabel.enabled=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/github
 spring.datasource.username=jacob
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
