--- a/Projects/SpringBoot/githubAnalytics/pom.xml
+++ b/Projects/SpringBoot/githubAnalytics/pom.xml
@@ -89,7 +89,14 @@
 			<artifactId>jaxb-impl</artifactId>
 			<version>3.0.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring5</artifactId>
+		</dependency>
 
 
 	</dependencies>
