--- a/Projects/SpringBoot/githubAnalytics/pom.xml
+++ b/Projects/SpringBoot/githubAnalytics/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>2.5.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
